[package]
authors = ["J David Smith <emallson@atlanis.net>"]
name = "flutter"
version = "0.1.0"

[dependencies]
base64 = "0.6.0"
error-chain = "0.10.0"
futures = "0.1.14"
hyper = "0.11.1"
hyper-tls = "0.1.2"
serde = "1.0.10"
serde_derive = "1.0.10"
serde_json = "1.0.2"
serde_yaml = "0.7.1"
tokio-core = "0.1.8"
